# app-census

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/analysis/: alignment.py  division_setup.py  overview.py  qt_analysis.py  qt_heatmap.py  qt_sensitivity.py  qualifying_times.py  team_analytics.py
dashboard/utils/: division_config.py  filters.py
data/: vpsu_standards_2025.csv
data/standards/: 2023-2025.csv  2026-2027.csv
db/: __init__.py  alembic.ini  config.py  loader.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_baseline.py  0002_reference_tables.py
division_configs/: divisions.csv
fixtures/: README.md  gg-at-ww.census.json
ingest/: Dockerfile  app.py  entrypoint.sh  requirements.txt  service.py  swimparse_runner.py
ingest/public/: app.js  index.html
leagues/: __init__.py  gpsa.yaml
proxy/: Caddyfile
scripts/: import_city_meet_standards.py  import_divisions.py  vendor-swimparse.sh
tests/: conftest.py  test_dashboard_imports.py  test_ingest.py  test_league_profile.py  test_migrations.py  test_schema.py  test_swimparse_runner.py  test_zip_upload.py
